sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: ')' expected but ',' found.
	for (i<- 0, getNombreValeurs()-2)
                  ^AlgCocktailSort1:27: error: ')' expected but '}' found.
		}
                ^